# roc_osprey

./: .gitignore  generate_admin_pw.py  github.py  main.py  osprey.py  osprey_worker.py  scrape_zulip.py  stats.py
crates/debug_parse/: Cargo.toml
crates/debug_parse/src/: main.rs
crates/syntax_adapter/: Cargo.toml
crates/syntax_adapter/src/: main.rs
osprey_parse/: Cargo.toml
osprey_parse/src/: main.rs
osprey_zulip/: Cargo.toml
osprey_zulip/src/: main.rs
wasm/roc-wasm-parse/: Cargo.toml
wasm/roc-wasm-parse/src/: lib.rs  parse.rs
