[package]
name = "osprey_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roc_parse = { path = "../../../roc-lang/roc/crates/compiler/parse" }
roc_fmt = { path = "../../../roc-lang/roc/crates/compiler/fmt" }
bumpalo = { version = "3.12.0", features = ["collections"] }
rusqlite = "0.32.1"
structopt = "0.3.26"
