[package]
name = "roc-wasm-parse"
version = "0.1.0"
authors = ["Joshua Warner <joshuawarner32@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
roc_parse = { path = "roc/crates/compiler/parse" }
roc_fmt = { path = "roc/crates/compiler/fmt" }
bumpalo = { version = "3.12.0", features = ["collections"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
